@@ -118,7 +118,7 @@
 ##################### Public ##########################
 RewriteRule ^(fr|en|nl){1,3}/{0,1}$     														/index.php?strLangue=$1 							[QSA,L]
 RewriteRule ^(actualites|news|nieuws).html/{0,1}$      													/news.php?news 									[QSA,L]
-RewriteRule ^(fr|en|nl){1,3}[/](actualites|news).html/{0,1}$      									/news.php?strLangue=$1&news 						[QSA,L]
+RewriteRule ^(fr|en|nl){1,3}[/](actualites|news|nieuws).html/{0,1}$      									/news.php?strLangue=$1&news 						[QSA,L]
 RewriteRule ^(actualites|news|nieuws)/page=([/0-9]+).html/{0,1}$      									/news.php?news&page=$2 							[QSA,L]
 RewriteRule ^(fr|en|nl){1,3}[/](actualites|news|nieuws)/page=([/0-9]+).html/{0,1}$      					/news.php?strLangue=$1&news&page=$3 				[QSA,L]
 RewriteRule ^(actualites|news|nieuws)/([/0-9]+)/([-_0-9a-zA-Z]+).html/{0,1}$      						/news.php?news&getdate=$2&getnews=$3 				[QSA,L]
