@@ -3,3 +3,11 @@ seo_t_static_news = Les articles et nouveautés de notre site internet
 seo_d_static_news = Les articles et nouveautés de notre site internet
 seo_t_static_plugin_contact = Le formulaire de contact
 seo_d_static_plugin_contact = Le formulaire de contact
+#HEADMENU
+topmenu_home_t = accueil
+topmenu_news_t = actualites
+topmenu_catalog_t = catalogue
+topmenu_contact_t = contact
+topmenu_news_uri = actualites.html
+topmenu_catalog_uri = catalogue
+topmenu_contact_uri = magixmod/contact/
