@@ -3,3 +3,11 @@ seo_t_static_news = Articles and innovations of our Website
 seo_d_static_news = Articles and innovations of our Website
 seo_t_static_plugin_contact = Contact form
 seo_d_static_plugin_contact = Contact form
+#HEADMENU
+topmenu_home_t = home
+topmenu_news_t = news
+topmenu_catalog_t = catalog
+topmenu_contact_t = contact
+topmenu_news_uri = news.html
+topmenu_catalog_uri = catalog/
+topmenu_contact_uri = magixmod/contact/
