@@ -3,3 +3,11 @@ seo_t_static_news = Artikelen en nieuwigheden van onze website
 seo_d_static_news = Artikelen en nieuwigheden van onze website
 seo_t_static_plugin_contact = Kontact formulier
 seo_d_static_plugin_contact = Kontact formulier
+#HEADMENU
+topmenu_home_t = home
+topmenu_news_t = nieuws
+topmenu_catalog_t = catalog
+topmenu_contact_t = kontact
+topmenu_news_uri = nieuws.html
+topmenu_catalog_uri = catalog/
+topmenu_contact_uri = magixmod/contact/
