@@ -1,10 +1,10 @@
 <div id="headmenu">
 	<div>
 		<ul>
-			<li><a href="{geturl}">Accueil</a></li>
-			<li><a href="{geturl}/catalogue/">Catalogue</a></li>
-			<li><a href="{geturl}/news.html">Actualités</a></li>
-			<li><a href="{geturl}/magixmod/contact/">Contact</a></li>
+			<li><a href="{geturl}/{getlang}">{#topmenu_home_t#|firststring}</a></li>
+			<li><a href="{geturl}/{getlang}{#topmenu_catalog_uri#}">{#topmenu_catalog_t#|firststring}</a></li>
+			<li><a href="{geturl}/{getlang}{#topmenu_news_uri#}">{#topmenu_news_t#|firststring}</a></li>
+			<li><a href="{geturl}/{getlang}{#topmenu_contact_uri#}">{#topmenu_contact_t#|firststring}</a></li>
 		</ul>
 	</div>
 </div>
