@@ -1,4 +1,5 @@
 <div id="entete">
+	{widget_prelude_lang display=true icons=true separator="|"}
 	<div class="top"></div>
  </div>
 {include file="common/headmenu.phtml"}
