@@ -1,2 +1,0 @@
-<div style="margin:5px;padding:5px;" class="ui-state-error ui-corner-all">
-<span style="float:left;" class="ui-icon ui-icon-alert"></span>Les champs ne sont pas tous rempli</div>
