@@ -1,97 +1,0 @@
-{include file="common/header.phtml" section="prepend"}
-{headmeta meta="description" content="{static_metas param=#seo_d_static_plugin_contact#}"}
-    <title>{static_metas param=#seo_t_static_plugin_contact#}</title>
-{include file="common/css.phtml"}
-</head>
-<body>
-<div id="page">
-{include file="common/top.phtml"}
-<div id="content">
-{include file="common/sidebar.phtml"}
-	<div id="principal" class="principal">
-	<h1>Formulaire de contact</h1>
-		<form class="forms-plugin-contact" method="post" action="">
-		{$msg}
-		<fieldset>
-			<table>
-				<tr>
-					<td class="label"><label for="nom" class="inlinelabel">Nom :</label></td>
-				</tr>
-				<tr>
-					<td><input type="text" id="nom" name="nom" style="background:white;" class="inputtext ui-widget-content ui-corner-all" value="" size="20" /></td>
-					<td style="width:150px;" class="errorInput"></td>
-				</tr>
-				<tr>
-					<td class="status"></td>
-				</tr>
-				<tr>
-					<td class="label"><label for="prenom" class="inlinelabel">Prenom :</label></td>
-				</tr>
-				<tr>
-					<td><input type="text" id="prenom" name="prenom" style="background:white;" class="inputtext ui-widget-content ui-corner-all" value="" size="20" /></td>
-					<td style="width:150px;" class="errorInput"></td>
-				</tr>
-				<tr>
-					<td class="status"></td>
-				</tr>
-				<tr>
-					<td class="label"><label for="email" class="inlinelabel">Courriel :</label></td>
-				</tr>
-				<tr>
-					<td><input type="text" id="email" name="email" style="background:white;" class="inputtext ui-widget-content ui-corner-all" value="" size="40" /></td>
-					<td style="width:150px;" class="errorInput"></td>
-				</tr>
-				<tr>
-					<td class="status"></td>
-				</tr>
-				<tr>
-					<td class="label"><label for="tel" class="inlinelabel">Téléphone :</label></td>
-				</tr>
-				<tr>
-					<td><input type="text" id="tel" name="tel" style="background:white;" class="inputtext ui-widget-content ui-corner-all" value="" size="20" /></td>
-					<td style="width:150px;" class="errorInput"></td>
-				</tr>
-				<tr>
-					<td class="status"></td>
-				</tr>
-				<tr>
-					<td class="label"><label for="adresse" class="inlinelabel">Adresse :</label></td>
-				</tr>
-				<tr>
-					<td><input type="text" id="adresse" name="adresse" style="background:white;" class="inputtext ui-widget-content ui-corner-all" value="" size="40" /></td>
-					<td style="width:150px;" class="errorInput"></td>
-				</tr>
-				<tr>
-					<td class="status"></td>
-				</tr>
-				<tr>
-					<td class="label"><label for="programme" class="inlinelabel">Je suis intéressé(e) par :</label></td>
-				</tr>
-				<tr>
-					<td><input type="text" id="programme" name="programme" style="background:white;" class="inputtext ui-widget-content ui-corner-all" value="{$smarty.post.moreinfo}" size="40" /></td>
-					<td style="width:150px;" class="errorInput"></td>
-				</tr>
-				<tr>
-					<td class="status"></td>
-				</tr>
-				<tr>
-					<td class="label"><label for="message" class="inlinelabel">Message :</label></td>
-				</tr>
-				<tr>
-					<td><textarea id="message" name="message" style="background:white;" class="fulltext ui-widget-content ui-corner-all" rows="10" cols="40"></textarea></td>
-					<td style="width:150px;" class="errorInput"></td>
-				</tr>
-				<tr>
-					<td class="status"></td>
-				</tr>
-				<tr>
-					<td><input type="submit" name="snom" class="fg-button ui-state-default ui-corner-all" value="envoyer" /></td>
-				</tr>
-			</table>
-		</fieldset>
-		</form>
-	</div>
-</div>
-{include file="common/footer.phtml"}
-</body>
-</html>
