@@ -1,2 +1,0 @@
-<div style="margin:5px;padding:5px;" class="ui-state-highlight ui-corner-all">
-<span style="float:left;" class="ui-icon ui-icon-info"></span>Votre message à été envoyé</div>
